insitail studio commit

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -8,6 +8,10 @@
 <body>
 <h1>My Super Fancy Spa</h1>
 <div id = "clientProfile">
+    <h2>My profile</h2>
+    <p th:text="${name}">Name</p>
+    <p th:text="${skintype}">SkinType</p>
+    <p th:text="${manipedi}">ManiPedi</p>
 </div>
 <div id = "servicesMenu">
 </div>
